--- a/client/scss/page.scss
+++ b/client/scss/page.scss
@@ -1,5 +1,6 @@
 .page-header {
   margin: (2 * $baseLine) 0;
+  clear: left;
 }
 
 #main-footer {
