--- a/client/scss/tabs.scss
+++ b/client/scss/tabs.scss
@@ -2,6 +2,7 @@
   @include clearfix;
   padding-left: 20px;
   overflow: hidden;
+  pointer-events: none;
 
   ul {
     padding: 0;
@@ -10,6 +11,7 @@
   }
 
   .tab {
+    pointer-events: auto;
     display: block;
     float: left;
     min-width: 60px;
